--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "cookie": "^0.5.0",
+    "cookies": "^0.8.0",
+    "cookies-next": "^4.0.0",
     "flowbite-react": "^0.6.1",
+    "image-to-base64": "^2.2.0",
     "next": "latest",
+    "next-auth": "^4.24.3",
     "primereact": "^10.0.2",
     "react": "latest",
     "react-dom": "latest",
@@ -23,6 +28,9 @@
     "@builder.io/dev-tools": "^0.1.24",
     "@builder.io/react": "^3.0.14",
     "@builder.io/sdk": "^2.0.8",
+    "@types/cookie": "^0.5.3",
+    "@types/cookies": "^0.7.9",
+    "@types/image-to-base64": "^2.1.1",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
@@ -30,5 +38,10 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
