--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
-    "flowbite-react": "^0.6.1",
+    "cookies-next": "^4.0.0",
+    "flowbite-react": "^0.6.4",
+    "jose": "^4.15.4",
     "next": "latest",
-    "primereact": "^10.0.2",
+    "next-auth": "^4.24.3",
+    "primereact": "^10.0.5",
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
