Add reset-password with nodemailer

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cookies-next": "^4.0.0",
     "flowbite-react": "^0.6.1",
     "image-to-base64": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "latest",
     "next-auth": "^4.24.3",
+    "nodemailer": "^6.9.7",
     "primereact": "^10.0.2",
     "react": "latest",
     "react-dom": "latest",
@@ -31,7 +33,9 @@
     "@types/cookie": "^0.5.3",
     "@types/cookies": "^0.7.9",
     "@types/image-to-base64": "^2.1.1",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "latest",
+    "@types/nodemailer": "^6.4.13",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
